style.css
* {
    box-sizing: border-box;
    margin: 0;
    font-family: 'Lato', Arial, Helvetica, sans-serif;
}

div {
    cursor: default;
}

:root {
    --white: #eff6ff;
    --white-blue: #dbeafe;
    --light-blue: #bfdbfe;
    --blue: #1d4ed8;
    --dark-blue: #172554;
}

body {
    height: 100vh;
    display: grid;
    grid-template: auto 5fr / 1fr 5fr;
}

.sidebar {
    display: grid;
    grid-row: 1 / 3;
    grid-template-columns: 1fr 4fr;    
    background-color: var(--dark-blue);
    color: var(--white);
}

.svg-container,
.sidebar-text-container {
    display: grid;
    grid-template-rows: auto auto auto 1fr;
    gap: 50px;
}

.svg-container svg {
    fill: var(--white);
    height: 20px;
}

.svg-container > div:first-child {
    padding-top: 20px;
    display: grid;
    align-items: center;
    justify-content: center;
}
.sidebar-text-container > div:first-child {
    padding-top: 20px;
    display: grid;
    align-items: center;
    font-size: 30px;
}

.svg-container > div:first-child > svg {
    height: 35px;
}

.sidebar-text-container > div, 
.svg-container > div{    
    display: grid;
    align-items: center;
    grid-auto-rows: 30px;
    gap: 15px;
    font-size: 18px;
}

.svg-container > div > div {
    display: flex;
    align-items: center;
    justify-content: center;
}

.sidebar a {
    text-decoration: none;
    color: var(--white);
}

.sidebar a:hover {
    font-weight: 700;
}


.header {
    grid-column: 2 / 3;
    display: grid;
    align-items: center;
    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
}

.header > div {
    padding: 30px;
}

.header > div:first-child {
    padding-bottom: 0px;
}

.header-top {
    display: grid;
    grid-template-columns: 3fr 1fr;
    align-items: center;
    padding-bottom: 0px;
}

.header-top div {    
    display: flex;
    align-items: center;
    gap: 15px;
}

.header-top > div > input {
    width: 70%;
    border-radius: 15px;
    padding: 5px 10px;
    border: 0;
    background-color: var(--white-blue);
}

.header-top img {
    height: 45px;
    border-radius: 50%;
    border: 1px solid var(--dark-blue);
}

.header-top svg {
    height: 20px;
    color: var(--dark-blue);
}

.header-top > div:last-child {
    font-weight: 700;
    gap: 10%;
    min-width: 230px;
}

.header-bottom {
    display: grid;
    align-items: center;
    grid-template-columns: 3fr 1fr;
    font-weight: 700;
}

.header-bottom > div:first-child {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr 2fr;
    /* align-items: center; */
}

.header-bottom > div:first-child > div:first-child {
    grid-row: 1 / 3;
    display: flex;
    padding-right: 20px;
    align-items: center;
}

.header-bottom > div:first-child > div:last-child {
    
    font-size: 24px;
}

.header-bottom img {
    height: 60px;
    border-radius: 50%;
    border: 1px solid var(--dark-blue);
}

.header-bottom > ul {
    list-style-type: none;
    display: grid;
    grid-template-columns: 70px 70px 70px;
    gap: 3%;
}

.header-bottom > ul > li > button {
    border: none;
    background-color: var(--blue);
    color: var(--white);
    padding: 10px 0px;
    font-weight: 700;
    width: 70px;
    border-radius: 20px;
    cursor: pointer;
}

.header a {
    color: black;
    text-decoration: none;
}

.main-content {
    display: grid;
    grid-column: 2 / 3;
    grid-template: 1fr 1fr / 3fr 1fr;    
    padding: 30px;
    background-color: var(--white-blue);
}

.main-projects-container {
    grid-row: 1 / 3;
}

.main-projects {
    display: grid;
    gap: 30px;
    grid-auto-rows: 200px;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.main-projects > div {
    background-color: white;
    border-radius: 5px;
    padding: 20px;
    border-left: 5px solid var(--blue);
    box-shadow: 2px 5px 7px rgba(0, 0, 0, 0.2);
}

.main-projects svg {
    height: 20px;
}

.main-projects > div {
    display: flex;
    flex-direction: column;
}

.main-projects > div > div {
    display: flex;
    justify-content: flex-end;
    gap: 20px;
    margin-top: auto;
}

a {
    text-decoration: none;
}





.main-announcements-container {
    padding-left: 30px;
}

.main-announcements {
    background-color: white;
    padding: 30px;
    border-radius: 5px;
    box-shadow: 2px 5px 7px rgba(0, 0, 0, 0.2);
}

.main-announcements > div {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    height: 80px;
    font-size: 14px;
    margin-top: 10px;
    border-top: 1px solid rgba(0, 0, 0, 0.4);
    padding-top: 10px;
}

.main-announcements > div:first-child {
    margin-top: 0px;
    border-top: 0px;
    padding-top: 0px;
    height: 70px;
}


.main-content h3 {
    padding-bottom: 15px;
}

.main-trending-container {
    padding-left: 30px;
    padding-top: 30px;
    height: 100%;
}

.main-trending {
    background-color: white;
    padding: 30px;
    padding-left: 0px;
    height: 281px;
    border-radius: 5px;
    display: grid;
    gap: auto;
    align-items: center;
    box-shadow: 2px 5px 7px rgba(0, 0, 0, 0.2);
}

.main-trending > div {
    display: grid;
    grid-template-columns: minmax(60px, 1fr) 2fr;
    grid-template-rows: 1fr 1fr;
}

.main-trending > div > div:first-child {
    grid-row: 1 / 3;
    display: flex;
    justify-content: center;
    /* align-items: center; */
}

.main-trending > div > div:nth-child(2) {
    display: flex;
    align-items: flex-end;
}

.main-trending > div > div:last-child {
    display: flex;
    align-items: flex-start;
}

.main-trending img {
    margin-top: 5px;
    align-self: center;
    height: 40px;
    border-radius: 50%;
}

